--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "TODO",
-  "description": "TODO",
+  "name": "covid19",
+  "description": "US Covid 19 Cases",
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
@@ -9,13 +9,15 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "bulma": "^0.9.1",
+    "chart.js": "^2.9.4",
     "compression": "^1.7.1",
+    "moment": "^2.29.1",
     "polka": "next",
     "sirv": "^1.0.0"
   },
   "devDependencies": {
-    "sapper": "^0.28.0",
-    "svelte": "^3.17.3",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -27,7 +29,10 @@
     "@rollup/plugin-replace": "^2.2.0",
     "@rollup/plugin-url": "^5.0.0",
     "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.0.0",
     "rollup-plugin-svelte": "^6.0.0",
-    "rollup-plugin-terser": "^7.0.0"
+    "rollup-plugin-terser": "^7.0.0",
+    "sapper": "^0.28.0",
+    "svelte": "^3.17.3"
   }
 }
